add detail activity

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="titleSize">24sp</dimen>
     <dimen name="codeSize">18sp</dimen>
+    <dimen name="text_titles_size">18sp</dimen>
+    <dimen name="main_margin">8dp</dimen>
+
 </resources>
